// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rehypeToReact should replace details element 1`] = `
<div
  class="sc-ERObt ekELNP"
  data-accordion-component="Accordion"
>
  <div>
    <div
      class="sc-jXbUNg heDTFL"
      data-accordion-component="AccordionItem"
    >
      <div
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
      >
        <div
          aria-controls="accordion__panel-raa-0"
          aria-disabled="false"
          aria-expanded="false"
          class="sc-kpDqfm heoudo"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-raa-0"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="sc-imWYAI gTeNha"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <div
            class="sc-dAlyuH cXMNBg"
          >
            <h3
              class="sc-kAyceB dvmaTz"
              data-testid="undefined-0"
              style="margin: 0px;"
            />
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="sc-dhKdcB fdfhnD"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-raa-0"
      >
        <div
          class="sc-bXCLTC cqpPUq"
        >
          <div
            data-type=" detailsContent"
          >
            <p>
              Ceci est le body
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rehypeToReact should replace details element with rich summary 1`] = `
<div
  class="sc-ERObt ekELNP"
  data-accordion-component="Accordion"
>
  <div>
    <div
      class="sc-jXbUNg heDTFL"
      data-accordion-component="AccordionItem"
    >
      <div
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
      >
        <div
          aria-controls="accordion__panel-raa-3"
          aria-disabled="false"
          aria-expanded="false"
          class="sc-kpDqfm heoudo"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-raa-3"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="sc-imWYAI gTeNha"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <div
            class="sc-dAlyuH cXMNBg"
          >
            <h3
              class="sc-kAyceB dvmaTz"
              data-testid="undefined-0"
              style="margin: 0px;"
            >Ceci est mon titre
            </h3>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="sc-dhKdcB fdfhnD"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-raa-3"
      >
        <div
          class="sc-bXCLTC cqpPUq"
        >
          <div
            data-type=" detailsContent"
          >
            <p>
              Ceci est le body
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rehypeToReact should replace details element within details element 1`] = `
<div
  class="sc-ERObt ekELNP"
  data-accordion-component="Accordion"
>
  <div>
    <div
      class="sc-jXbUNg heDTFL"
      data-accordion-component="AccordionItem"
    >
      <div
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
      >
        <div
          aria-controls="accordion__panel-raa-1"
          aria-disabled="false"
          aria-expanded="false"
          class="sc-kpDqfm heoudo"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-raa-1"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="sc-imWYAI gTeNha"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <div
            class="sc-dAlyuH cXMNBg"
          >
            <h3
              class="sc-kAyceB dvmaTz"
              data-testid="undefined-0"
              style="margin: 0px;"
            />
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="sc-dhKdcB fdfhnD"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-raa-1"
      >
        <div
          class="sc-bXCLTC cqpPUq"
        >
          <div
            data-type=" detailsContent"
          >
            <div
              class="sc-ERObt ekELNP"
              data-accordion-component="Accordion"
            >
              <div>
                <div
                  class="sc-jXbUNg heDTFL"
                  data-accordion-component="AccordionItem"
                >
                  <div
                    class="accordion__heading"
                    data-accordion-component="AccordionItemHeading"
                  >
                    <div
                      aria-controls="accordion__panel-raa-2"
                      aria-disabled="false"
                      aria-expanded="false"
                      class="sc-kpDqfm heoudo"
                      data-accordion-component="AccordionItemButton"
                      id="accordion__heading-raa-2"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        aria-hidden="true"
                        class="sc-imWYAI gTeNha"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <polyline
                          points="9 18 15 12 9 6"
                        />
                      </svg>
                      <div
                        class="sc-dAlyuH cXMNBg"
                      >
                        <h4
                          class="sc-kAyceB dvmaTz"
                          data-testid="undefined-0"
                          style="margin: 0px;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    aria-hidden="true"
                    class="sc-dhKdcB fdfhnD"
                    data-accordion-component="AccordionItemPanel"
                    hidden=""
                    id="accordion__panel-raa-2"
                  >
                    <div
                      class="sc-bXCLTC cqpPUq"
                    >
                      <div
                        data-type=" detailsContent"
                      >
                        <p>
                          Ceci est le body
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rehypeToReact should start title level to 4 if heading 3 before 1`] = `
<div>
  <h3>
    HELLO
  </h3>
  <div
    class="sc-ERObt ekELNP"
    data-accordion-component="Accordion"
  >
    <div>
      <div
        class="sc-jXbUNg heDTFL"
        data-accordion-component="AccordionItem"
      >
        <div
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
        >
          <div
            aria-controls="accordion__panel-raa-4"
            aria-disabled="false"
            aria-expanded="false"
            class="sc-kpDqfm heoudo"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-raa-4"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="sc-imWYAI gTeNha"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="sc-dAlyuH cXMNBg"
            >
              <h4
                class="sc-kAyceB dvmaTz"
                data-testid="undefined-0"
                style="margin: 0px;"
              />
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="sc-dhKdcB fdfhnD"
          data-accordion-component="AccordionItemPanel"
          hidden=""
          id="accordion__panel-raa-4"
        >
          <div
            class="sc-bXCLTC cqpPUq"
          >
            <div
              data-type=" detailsContent"
            >
              <p>
                Ceci est le body
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
